DashScope: Introduce Qwen3 and the thinking mode parameter (#188)
* DashScope: Introduce Qwen3 and the thinking mode parameter

* Add the thinking mode parameter into starter